[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.1.0",
    "beautifulsoup4>=4.14.3",
    "datasets>=4.8.4",
    "ddgs>=9.13.1",
    "docutils>=0.22.4",
    "e2b-code-interpreter>=2.6.0",
    "fastapi>=0.135.3",
    "fastmcp>=3.2.4",
    "google-genai>=1.73.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.29",
    "langchain-google-genai>=4.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.13",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.31",
    "lxml>=6.0.4",
    "markdown2>=2.5.5",
    "markitdown[all]>=0.1.5",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "openai>=2.31.0",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "pydantic>=2.13.1",
    "pymupdf>=1.27.2.2",
    "pymupdf4llm>=1.27.2.2",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "tavily-python>=0.7.23",
    "textblob>=0.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "xhtml2pdf>=0.2.17",
    "yfinance>=1.2.2",
    "youtube-transcript-api>=1.0.3",
]
